--- a/authors.txt
+++ b/authors.txt
@@ -55,6 +55,10 @@ and mpz_powm_ui to MPIR</li>
 <li>sav-ix (Alexander) - patch for t-locale on Windows</li>
 <li>Isuru Fernando - Tuning values</li>
 <li>Alex Dyachenko - mpir.net for interface to .net languages</li>
+<li>Tommy Hoffman - Supplied a sed patch.</li>
+<li>Averkhaturau - Fixed a C++ compilation problem.</li>
+<li>Marcell Keller - Fixed a sign conversion bug.</li>
+<li>Sergey Taymanov - Fixed some Windows build file issues.</li>
 </ul>
 
 <h3>Citing MPIR</h3>
